20080831 code: added agar.gui.widget.checkbox.
20080901 code: added agar.gui.widget.combo
20080901 code: added agar.gui.widget.console
20080901 code: added agar.gui.widget.editable
20080901 code: added agar.gui.widget.file_dialog
20080901 code: added agar.gui.widget.pane
20080901 code: added agar.gui.widget.textbox
20080901 code: added agar.gui.widget.fixed
20080901 code: added agar.gui.widget.graph
20080903 code: added all remaining API sections (types only).
20080905 code: fixed graph structures.
20080905 code: use subpackages instead of prefixes for C-typed functions.
20080905 code: move private data into private record types.
20080905 code: added agar.gui.widget.combo API functions.
20080905 code: added agar.gui.widget.console API functions.
20080906 code: added agar.gui.widget.editable API functions.
20080906 code: added agar.gui.widget.file_dialog API functions.
20080909 code: added agar.gui.widget.file_dialog.add_filetype.
20080909 code: agar.gui.widget.fixed is now a generic package.
20080910 code: added agar.gui.widget.fixed API functions.
20080910 code: added helloworld1 demo.
20080910 code: added agar.gui.widget.fixed_plotter API functions.
20080913 code: added agar.gui.widget.graph API functions.
20080913 code: added agar.gui.widget.hbox API functions.
20080913 code: added agar.gui.widget.vbox API functions.
20080914 code: added agar.gui.widget.label API functions.
20080914 code: added agar.gui.widget.hsvpal API functions.
20080914 code: added agar.gui.widget.mpane API functions.
20080914 code: added agar.gui.widget.notebook API functions.
20080914 code: added agar.gui.widget.menu API functions.
20080916 code: added agar.gui.widget.numerical API functions.
20080917 code: added agar.gui.widget.pixmap API functions.
20080917 code: added agar.gui.widget.pane API functions.
20080917 code: added agar.gui.widget.progress_bar API functions.
20080917 code: added agar.gui.widget.radio API functions.
20080917 code: added agar.gui.widget.scrollbar API functions.