@@ -1,0 +1,5 @@
+Code gen:
+
+  HAVE_64BIT
+  HAVE_LONG_DOUBLE
+
