@@ -1,1 +1,1 @@
-agar.gui.widget.separator agar-gui-widget-separator.ads
+agar.gui.widget.separator agar-gui-widget-separator.ads agar-gui-widget-separator.adb
