@@ -1,1 +1,1 @@
-agar.gui.widget.slider agar-gui-widget-slider.ads
+agar.gui.widget.slider agar-gui-widget-slider.ads agar-gui-widget-slider.adb
